--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "kill-port": "^1.6.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.3",
+    "serverless": "^2.72.3",
     "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-offline": "^8.8.1",
     "serverless-webpack": "^5.5.1",
     "source-map-support": "^0.5.6",
     "ts-jest": "^27.0.3",
