--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "test": "jest --runInBand ./test",
     "start": "nodemon",
     "start:sls": "sls offline start",
-    "deploy-prod": "sls --stage=production deploy"
+    "deploy-prod": "sls --stage=production deploy",
+    "sls-build": "sls package -p build/"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.5",
     "@typegoose/typegoose": "^7.6.3",
-    "apollo-server-lambda": "2.14.2",
-    "apollo-tracing": "0.0.9",
     "assert": "^1.4.1",
     "aws-sdk": "^2.385.0",
     "aws-serverless-express": "^3.3.6",
@@ -23,21 +22,19 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "graphql": "^0.13.0",
-    "graphql-tag": "2.8.0",
-    "graphql-tools": "2.23.1",
     "helmet": "^3.21.0",
     "http-errors": "^1.8.0",
     "jsonschema": "^1.2.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3",
+    "mongodb": "^3.4.0",
+    "mongodb-client-encryption": "^2.5.0",
+    "mongoose": "^5.10.18",
     "mongoose-paginate-v2": "^1.4.1",
     "multiparty": "^4.2.2",
     "oauth": "^0.9.15",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "redis": "^2.8.0",
-    "type-graphql": "^0.17.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -47,7 +44,6 @@
     "@types/continuation-local-storage": "^3.2.1",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
-    "@types/graphql": "^14.5.0",
     "@types/helmet": "0.0.44",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^26.0.24",
@@ -68,6 +64,7 @@
     "serverless-webpack": "^5.5.1",
     "source-map-support": "^0.5.6",
     "ts-jest": "^27.0.3",
+    "ts-loader": "~8.2.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
     "webpack": "^4.5.0"
