--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
+    - run: npm i --legacy-peer-deps
     - run: npm test
     # - name: serverless deploy
     #   uses: serverless/github-action@v3.1
