--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,12 @@
     "typeRoots": ["node_modules/@types"],
     "target": "es6",
     "esModuleInterop": true,
-    "lib": ["esnext"]
+    "lib": ["esnext"],
+    "paths": {
+      "@/tests/*": ["tests/*"],
+      "@/*": ["src/*"]
+    }
   },
   "exclude": ["node_modules"]
 }
+    
