--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "url": "git+https://github.com/vinicamposdev/user-auth.git"
   },
   "scripts": {
-    "test": "jest --runInBand ./test",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch",
     "start": "nodemon",
     "start:sls": "sls offline start",
     "deploy-prod": "sls --stage=production deploy",
