--- a/package.json
+++ b/package.json
@@ -53,8 +53,15 @@
     "@types/node": "^8.0.57",
     "@types/passport": "^1.0.1",
     "@types/uuid": "^3.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "concurrently": "^5.2.0",
     "dotenv": "^8.1.0",
+    "eslint": "^8.34.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^27.0.6",
     "kill-port": "^1.6.1",
     "morgan": "^1.9.1",
