--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
+    "rootDirs": ["src", "tests"],
     "baseUrl": "./",
     "sourceMap": true,
     "declaration": false,
@@ -20,4 +22,3 @@
   },
   "exclude": ["node_modules"]
 }
-    
