--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 
   user-auth:
     container_name: api-container
+    platform: linux/amd64
     build:
       context: ./docker/serverless
     volumes:
@@ -24,4 +25,19 @@ services:
       - "9222:9222"
     links:
       - mongodb
+    networks:
+      - sonarNet
 
+  # https://github.com/DiegoBulhoes/sonarqube-nodejs
+  sonarqube:
+    image: sonarqube:latest
+    restart: always
+    ports:
+      - '9000:9000'
+      - '9092:9092'
+    networks:
+      - sonarNet
+
+networks:
+  sonarNet:
+    driver: bridge
