--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   "scripts": {
     "test": "jest --runInBand --no-cache",
     "test:unit": "jest --passWithNoTests --runInBand --no-cache --watch -c jest-unit-config.js",
+    "sonar": "node sonar-project.js",
     "start": "nodemon --module",
     "start:sls": "sls offline start",
     "deploy-prod": "sls --stage=production deploy",
     "sls-build": "sls package -p build/"
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
   },
   "dependencies": {
     "@graphql-tools/schema": "^9.0.16",
@@ -73,6 +79,7 @@
     "dotenv": "^8.1.0",
     "html-loader": "^4.2.0",
     "jest": "^27.0.6",
+    "jest-sonar-reporter": "^2.0.0",
     "kill-port": "^1.6.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.3",
@@ -82,6 +89,7 @@
     "serverless-plugin-typescript": "^2.1.4",
     "serverless-tscpaths": "^0.0.8",
     "serverless-webpack": "^5.5.1",
+    "sonarqube-scanner": "^3.0.1",
     "source-map-support": "^0.5.6",
     "supertest": "^6.3.3",
     "ts-jest": "^27.0.3",
